<resources>
    <string name="digits_input" translatable="false">qwertyuiopasdfghjklzxcvbnm</string>
    <string name="digits_input2" translatable="false">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890&#160;</string>
    <string name="digits_input_decimal" translatable="false">1234567890.</string>
    <string name="digits_input_wallet_password" translatable="false">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890!@#$%^&amp;*()_\-\+=&lt;&gt;?:\"{}|,./;\[\]~·`</string>
    <string name="wallet">Wallet</string>
    <string name="dapp">DApp</string>
    <string name="me">Me</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_with">Continue with</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="email">Email</string>
    <string name="use_web3">Use Web3.0</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="create_new_wallet">Create a new wallet</string>
    <string name="import_wallet">Import wallet</string>
    <string name="import_text">Import</string>
    <string name="import_existing_wallet">Import existing mnemonic or private key</string>
    <string name="hello_walletverse_example_com">hello_walletverse@example.com</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="pin">PIN</string>
    <string name="check_pin">Check PIN</string>
    <string name="please_input_6_pin">Please enter a 6-digit pin</string>
    <string name="please_enter_name">Please enter the correct name</string>
    <string name="please_enter_mnemonic_or_private_key">Please enter the Mnemonic or Private Key</string>
    <string name="pins_not_match">Two PINs are not consistent</string>
    <string name="create">Create</string>
    <string name="mnemonic">Mnemonic</string>
    <string name="backup_mnemonic">Backup mnemonic</string>
    <string name="backup_completed">Backup completed</string>
    <string name="backup_mnemonic_tip1">Please copy the mnemonic words in order to ensure that the backup is correct</string>
    <string name="backup_mnemonic_tip2">*Please keep the mnemonic to a safe place on an isolated network</string>
    <string name="backup_mnemonic_tip3">*Do not share and store mnemonics in a networked environment</string>
    <string name="verify_mnemonic">Verify mnemonic</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="mnemonic_or_private_key">Mnemonic or Private Key</string>
    <string name="go_back_again">Go back again and exit the app</string>
    <string name="please_input_word"><Data><![CDATA[What is the <font color="#448AFF"><b>%1$s</b></font> word of the mnemonic?]]></Data></string>
    <string name="wallet_list">Wallet list</string>
    <string name="add_wallet">Add wallet</string>
    <string name="receive">Receive</string>
    <string name="receive_tip">This address only supports %1$s assets ,please do not transfer assets from other public chains</string>
    <string name="receive_tip2">Scan QR code to transfer %1$s</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="copy_success">Copy Copied to clipboard</string>
    <string name="share_failed">Share Failed</string>
    <string name="amount">Amount</string>
    <string name="gas_fee">Gas Fee</string>
    <string name="transfer">Transfer</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="contract_address">Contract Address</string>
    <string name="hash">Hash</string>
    <string name="no_data">No Data</string>
    <string name="view_details">View details</string>
    <string name="open_camera_failed">Open camera failed</string>
    <string name="hint_input_address">Input the address of receiver</string>
    <string name="setting">Settings</string>
    <string name="export_all_private_keys">Export all private keys</string>
    <string name="profile">Profile</string>
    <string name="modify_wallet_name">Modify wallet name</string>
    <string name="private_key">Private Key</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="payment_details">Payment Details</string>
    <string name="chain_management">Wallet Main Chain Management</string>
    <string name="wallet_management">Wallet Management</string>
    <string name="hide">Hide</string>
    <string name="select_chain">Select the main chain</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="import_error_tip">Please import the correct mnemonic or private key</string>
    <string name="delete_last_wallet_tip">If I delete the last wallet, will the PIN be removed as well? Are you sure?</string>
    <string name="custom_token">Custom Token</string>
    <string name="language">Languages</string>
    <string name="currency">Currency</string>
    <string name="unit">Unit</string>
    <string name="add_chain_tip">Please add %1$s main chain</string>
    <string name="available_balance">Available: %1$s </string>
    <string name="fastest">Fastest</string>
    <string name="fast">Fast</string>
    <string name="general">General</string>
    <string name="advanced">Advanced</string>
    <string name="input_amount">Please enter the transfer amount</string>
    <string name="insufficient_transfer_balance">Insufficient transfer balance</string>
    <string name="search">Search</string>
    <string name="enter_contract_address">Enter contract address</string>
    <string name="add_success">Added Successfully</string>
    <string name="add_fail">Added Failed</string>
    <string name="transfer_success">Transfer Successfully</string>
    <string name="transfer_failed">Transfer Failed"</string>
    <string name="pending">Pending</string>
    <string name="fail">Failed</string>
    <string name="success">Success</string>
    <string name="already_exist">Already exist</string>
    <string name="wallet_password">Wallet Password</string>
    <string name="check_wallet_password">Check Wallet Password</string>
    <string name="wallet_pwd_tip_1">At least 8 characters</string>
    <string name="wallet_pwd_tip_2">At least 1 character, 1 digit, 1 symbol</string>
    <string name="restore">Restore</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="please_input_wallet_password">Please enter the wallet password</string>
    <string name="wallet_password_not_match">Passwords do not match</string>
    <string name="wallet_password_error">Please enter 8-16 digit password with at least 1 character, 1 numeric character, and 1 special character</string>
    <string name="failed_to_create_wallet">Failed to create wallet</string>
    <string name="failed_to_restore_wallet">Failed to restore wallet</string>
    <string name="email_verification">Email Verification</string>
    <string name="graphics_verification">Graphics Verification</string>
    <string name="graphics_verification_error">Graphics Verification Error</string>
    <string name="email_verification_code">Email Verification Code</string>
    <string name="email_verification_code_error">Email Verification Code Error</string>
    <string name="nft">NFT</string>
    <string name="transfer_collection">Transfer Collection</string>
    <string name="sign_data">Data</string>
</resources>