<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/view_titlebar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        style="@style/Walletverse_Text1_Bold"
        android:text="@string/backup_mnemonic"
        android:textSize="20sp"
        android:layout_marginHorizontal="15dp"/>

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        style="@style/Walletverse_Text3"
        android:text="@string/backup_mnemonic_tip1"
        android:layout_marginHorizontal="15dp"/>


    <com.ruffian.library.widget.RFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:corner_radius="10dp"
        app:background_normal="@color/color_bg1"
        android:paddingVertical="5dp"
        android:minHeight="200dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/v_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.ruffian.library.widget.RFrameLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Walletverse_Text3"
        android:text="@string/backup_mnemonic_tip2"
        android:layout_marginHorizontal="15dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Walletverse_Text3"
        android:text="@string/backup_mnemonic_tip3"
        android:layout_marginHorizontal="15dp"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.walletverse.ui.view.WalletverseButton
        android:id="@+id/v_backup_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:befi_text="@string/backup_completed"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="30dp"
        />


</LinearLayout>