<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <include layout="@layout/view_titlebar"/>

    <com.ruffian.library.widget.REditText
        android:id="@+id/v_name"
        style="@style/Walletverse_EditText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:hint="@string/wallet_name"
        android:inputType="text"
        app:background_normal="@color/color_bg1"
        android:maxLength="50"
        app:corner_radius="12dp"
        android:layout_marginHorizontal="15dp"/>


    <TextView
        android:id="@+id/v_pin_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Walletverse_Text2"
        android:text="@string/please_input_6_pin"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        />

    <com.ruffian.library.widget.REditText
        android:id="@+id/v_pin"
        style="@style/Walletverse_EditText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="5dp"
        android:hint="@string/pin"
        android:inputType="number"
        app:background_normal="@color/color_bg1"
        android:maxLength="6"
        app:corner_radius="12dp"
        android:layout_marginHorizontal="15dp"/>

    <com.ruffian.library.widget.REditText
        android:id="@+id/v_check_pin"
        style="@style/Walletverse_EditText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:hint="@string/check_pin"
        android:inputType="number"
        app:background_normal="@color/color_bg1"
        android:maxLength="6"
        app:corner_radius="12dp"
        android:layout_marginHorizontal="15dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

<!--    <com.ruffian.library.widget.RTextView-->
<!--        android:id="@+id/v_create"-->
<!--        style="@style/BeFi_Button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:text="@string/create"-->
<!--        app:corner_radius="24dp"-->
<!--        app:background_normal="@color/colorPrimary"-->
<!--        app:text_color_normal="@color/color_tv1"-->
<!--        android:layout_marginHorizontal="15dp"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        app:ripple="true"-->
<!--        app:ripple_color="@color/white"-->
<!--        />-->

    <com.walletverse.ui.view.WalletverseButton
        android:id="@+id/v_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:befi_text="@string/create"

        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="15dp"
        />

</LinearLayout>