<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/v_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back"
            android:paddingHorizontal="15dp"/>

        <com.ruffian.library.widget.REditText
            android:id="@+id/v_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="15dp"
            app:background_normal="@color/color_bg1"
            app:corner_radius="100dp"
            android:gravity="center_vertical"
            android:textCursorDrawable="@null"
            android:hint="@string/enter_contract_address"
            android:textSize="16sp"
            android:textColor="@color/color_tv1"
            android:textColorHint="@color/color_tv3"
            android:digits="@string/digits_input2"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:inputType="text"
            />

        <com.ruffian.library.widget.RTextView
            android:id="@+id/v_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="15dp"
            android:text="@string/search"
            app:text_color_normal="@color/color_tv1"
            android:textSize="16sp"
            android:gravity="center"
            app:ripple="true"
            app:ripple_color="@color/color_bg1"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/v_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>